# rrq

./: .coverage  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  README.md  RRQ_Implementation_TODO.md  RRQ_Multi_Worker_Analysis.md  SEMAPHORE_OPTIMIZATION_SUMMARY.md  pyproject.toml
.github/workflows/: build-wheels.yml  ci.yml  release.yml
docs/: ARCHITECTURE.md  CLI_REFERENCE.md  CONFIG_REFERENCE.md  ENGINE_CONFORMANCE.md  EXECUTOR_PROTOCOL.md  FFI_PACKAGING.md  PARITY_SPEC.md  RUNNER_PROTOCOL.md  TELEMETRY.md
examples/: __init__.py  integration_test.py
examples/python/: README.md  __init__.py  example_rrq_settings.py  executor_config.py  handlers.py  perf_test.py  producer.py  rrq.toml  rrq_multi.toml  runner_config.py
examples/rust/: README.md
examples/rust/producer/: Cargo.toml
legacy/: README.md
legacy/examples/python/: multi_runtime_worker.py  rrq_example.py
legacy/python/rrq/: cli.py  hooks.py  worker.py
legacy/tests/: test_engine_conformance.py  test_worker.py
legacy/tests/cli_commands/: test_monitor_commands.py
reference/python/: README.md  socket_executor.py  stdio_executor.py
reference/python-orchestrator/: README.md
reference/python-orchestrator/tests/: conftest.py  test_cli.py  test_engine_conformance.py  test_worker.py
reference/rust/: Cargo.toml  README.md
reference/rust/rrq-executor/: Cargo.toml  README.md
reference/rust/rrq-executor/examples/: stdio_executor.rs
reference/rust/rrq-executor/src/: lib.rs  registry.rs  telemetry.rs  types.rs
reference/rust/rrq-orchestrator/: Cargo.toml  README.md
reference/rust/rrq-orchestrator/src/: cli_utils.rs  client.rs  config.rs  cron.rs  executor.rs  job.rs  lib.rs  main.rs  settings.rs  store.rs  worker.rs
reference/rust/rrq-orchestrator/src/commands/: debug.rs  dlq.rs  executor.rs  health.rs  job.rs  queue.rs  shared.rs  worker.rs
reference/rust/rrq-orchestrator/tests/: engine_conformance.rs
reference/rust/rrq-producer/: Cargo.toml  README.md
reference/rust/rrq-producer/examples/: producer.rs
reference/rust/rrq-producer/src/: lib.rs
reference/typescript/: executor_runtime.ts
rrq/: __init__.py  cli.py  client.py  config.py  constants.py  cron.py  executor.py  executor_runtime.py  protocol.py  rrq.py  settings.py  store.py  telemetry.py  worker.py
rrq-py/: README.md  pyproject.toml
rrq-py/rrq/: __init__.py  client.py  config.py  constants.py  executor.py  executor_runtime.py  executor_settings.py  job.py  producer_ffi.py  registry.py  runner.py  runner_runtime.py  runner_settings.py  settings.py  store.py  telemetry.py
rrq-py/rrq/integrations/: otel.py  (+1 more)
rrq-py/scripts/: build_rust_binary.py
rrq-py/tests/: CLAUDE.md  test_cli.py  test_client.py  test_constants.py  test_executor.py  test_executor_runtime.py  test_otel_integration.py  test_producer_ffi_settings.py  test_protocol.py  test_registry.py  test_runner.py  test_runner_runtime.py
rrq-rs/: Cargo.toml  README.md
rrq-rs/.cargo/: config.toml
rrq-rs/config/: Cargo.toml  README.md
rrq-rs/config/src/: config.rs  cron.rs  defaults.rs  lib.rs  otlp.rs  producer.rs  queue.rs  settings.rs  tcp_socket.rs
rrq-rs/executor/: Cargo.toml  README.md
rrq-rs/executor/examples/: socket_executor.rs
rrq-rs/executor/src/: lib.rs  registry.rs  runtime.rs  telemetry.rs
rrq-rs/orchestrator/: Cargo.toml  README.md  build.rs
rrq-rs/orchestrator/src/: client.rs  config.rs  constants.rs  cron.rs  executor.rs  job.rs  lib.rs  main.rs  runner.rs  settings.rs  store.rs  telemetry.rs  test_support.rs  worker.rs
rrq-rs/orchestrator/src/commands/: debug.rs  dlq.rs  executor.rs  health.rs  job.rs  mod.rs  queue.rs  runner.rs  shared.rs  test_support.rs  worker.rs
rrq-rs/orchestrator/src/lua/: claim_ready.lua  enqueue.lua  lock_and_start.lua  refresh_lock.lua  release_lock_if_owner.lua  retry.lua
rrq-rs/orchestrator/src/runner/: tests.rs
rrq-rs/orchestrator/src/store/: tests.rs
rrq-rs/orchestrator/src/worker/: tests.rs
rrq-rs/producer/: Cargo.toml  README.md
rrq-rs/producer/examples/: producer.rs
rrq-rs/producer/src/: ffi.rs  lib.rs
rrq-rs/producer/src/lib/: tests.rs
rrq-rs/protocol/: Cargo.toml  README.md
rrq-rs/protocol/src/: lib.rs
rrq-rs/rrq-executor/: Cargo.toml  README.md
rrq-rs/rrq-executor/examples/: socket_executor.rs
rrq-rs/rrq-executor/src/: lib.rs  runtime.rs  telemetry.rs  types.rs
rrq-rs/rrq-orchestrator/: Cargo.toml  README.md
rrq-rs/rrq-orchestrator/src/: cli_utils.rs  client.rs  config.rs  constants.rs  cron.rs  executor.rs  lib.rs  main.rs  settings.rs  store.rs  test_support.rs  worker.rs
rrq-rs/rrq-orchestrator/src/commands/: debug.rs  dlq.rs  executor.rs  health.rs  job.rs  mod.rs  queue.rs  shared.rs  worker.rs
rrq-rs/rrq-orchestrator/tests/: engine_conformance.rs
rrq-rs/rrq-producer/: Cargo.toml  README.md
rrq-rs/rrq-producer/examples/: producer.rs
rrq-rs/rrq-producer/src/: lib.rs
rrq-rs/rrq-protocol/: Cargo.toml  README.md
rrq-rs/rrq-protocol/src/: lib.rs
rrq-rs/runner/: Cargo.toml  README.md
rrq-rs/runner/examples/: socket_runner.rs
rrq-rs/runner/src/: lib.rs  parent_guard.rs  registry.rs  runtime.rs  telemetry.rs
rrq-ts/: README.md  package.json  tsconfig.json
rrq-ts/examples/: integration_producer.ts
rrq-ts/scripts/: check-coverage.ts
rrq-ts/src/: constants.ts  executor_runtime.ts  index.ts  otel.ts  producer.ts  producer_ffi.ts  runner_runtime.ts  settings.ts
rrq-ts/tests/: constants.test.ts  executor_runtime.integration.test.ts  executor_runtime.test.ts  index.test.ts  otel.test.ts  producer.integration.test.ts  producer.test.ts  producer_ffi.test.ts  protocol.test.ts  runner_runtime.integration.test.ts  runner_runtime.test.ts
rrq/cli_commands/: utils.py
scripts/: build_rust_binary.py  with-producer-lib.sh
tests/: test_atomic_operations.py  test_cli.py  test_cli_multi_worker.py  test_client.py  test_executor.py  test_executor_runtime.py  test_jittered_delays.py  test_semaphore_optimization.py  test_store.py  test_worker.py
tests/cli_commands/: conftest.py  test_debug_commands.py  test_integration.py
(+25 files in other folders)
