[workspace]
resolver = "2"
members = [
    "config",
    "runner",
    "orchestrator",
    "producer",
    "protocol",
]

[profile.release]
overflow-checks = true

[workspace.lints.rust]
unsafe_code = "deny"
dead_code = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
module_name_repetitions = "allow"
too_many_lines = "allow"
manual_let_else = "allow"
single_match_else = "allow"
map_unwrap_or = "allow"
needless_pass_by_value = "allow"
uninlined_format_args = "allow"
similar_names = "allow"
struct_field_names = "allow"
unnested_or_patterns = "allow"
items_after_statements = "allow"
elidable_lifetime_names = "allow"
redundant_closure_for_method_calls = "allow"
unnecessary_semicolon = "allow"
inefficient_to_string = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
cast_lossless = "allow"
must_use_candidate = "allow"
borrow_as_ptr = "allow"
implicit_hasher = "allow"
unused_self = "allow"
match_same_arms = "allow"
unreadable_literal = "allow"
cloned_instead_of_copied = "allow"
manual_is_variant_and = "allow"
ignored_unit_patterns = "allow"
manual_string_new = "allow"
default_trait_access = "allow"
float_cmp = "allow"
large_futures = "allow"
unnecessary_wraps = "allow"
