[package]
name = "rrq-config"
version = "0.9.11"
edition = "2024"
license = "Apache-2.0"
description = "RRQ configuration loader and settings types."
repository = "https://github.com/getresq/rrq"
homepage = "https://github.com/getresq/rrq"
documentation = "https://docs.rs/rrq-config"
readme = "README.md"
keywords = ["rrq", "config", "toml", "redis", "queue"]
categories = ["config"]

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.43", features = ["serde"] }
cron = "0.15.0"
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.8"
num_cpus = "1.17.0"

[dev-dependencies]
tempfile = "3.17.1"
uuid = { version = "1.20.0", features = ["v4"] }

[lints]
workspace = true
