[package]
name = "rrq"
version = "0.10.0"
edition = "2024"
build = "build.rs"
license = "Apache-2.0"
description = "RRQ orchestrator CLI and worker runtime."
repository = "https://github.com/getresq/rrq"
homepage = "https://github.com/getresq/rrq"
documentation = "https://docs.rs/rrq"
readme = "README.md"
keywords = ["rrq", "redis", "queue", "jobs"]
categories = ["asynchronous", "command-line-utilities"]

[[bin]]
name = "rrq"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive"] }
cron = "0.15.0"
dotenvy = "0.15.7"
globset = "0.4.18"
ignore = "0.4.23"
num_cpus = "1.17.0"
notify = "8.2.0"
redis = { version = "1.0.2", features = ["tokio-comp", "tokio-rustls-comp", "tls-rustls-webpki-roots", "connection-manager"] }
rustls = { version = "0.23", features = ["ring"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["fs", "io-std", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
uuid = { version = "1.20.0", features = ["v4"] }
rand = "0.9.2"
opentelemetry = { version = "0.31.0", default-features = false, features = ["trace", "metrics", "logs"] }
opentelemetry-otlp = { version = "0.31.0", default-features = false, features = ["http-proto", "reqwest-client", "reqwest-rustls-webpki-roots", "trace", "metrics", "logs"] }
opentelemetry_sdk = { version = "0.31.0", default-features = false, features = ["trace", "metrics", "logs", "rt-tokio", "experimental_trace_batch_span_processor_with_async_runtime", "experimental_metrics_periodicreader_with_async_runtime"] }
opentelemetry-appender-tracing = "0.31.1"
tracing-opentelemetry = "0.32.1"

rrq-protocol = { version = "0.10.0", path = "../protocol" }
rrq-config = { version = "0.10.0", path = "../config" }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30.1", default-features = false, features = ["signal", "process"] }

[dev-dependencies]
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["io-std", "io-util", "macros", "rt-multi-thread"] }
rrq-producer = { version = "0.10.0", path = "../producer" }

[build-dependencies]
full_moon = { version = "2.1.1", default-features = false }

[lints]
workspace = true
