[package]
name = "rrq-producer"
version = "0.9.17"
edition = "2024"
license = "Apache-2.0"
description = "RRQ producer client for enqueuing jobs into Redis."
repository = "https://github.com/getresq/rrq"
homepage = "https://github.com/getresq/rrq"
documentation = "https://docs.rs/rrq-producer"
readme = "README.md"
keywords = ["rrq", "redis", "queue", "jobs", "producer"]
categories = ["asynchronous"]

[lib]
name = "rrq_producer"
crate-type = ["rlib", "cdylib"]

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
chrono = { version = "0.4.43", features = ["serde"] }
redis = { version = "1.0.2", features = ["tokio-comp", "tokio-rustls-comp", "tls-rustls-webpki-roots", "connection-manager"] }
rustls = { version = "0.23", features = ["ring"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "sync", "time"] }
uuid = { version = "1.20.0", features = ["v4"] }
rrq-config = { version = "0.9.17", path = "../config" }

[dev-dependencies]
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "time"] }
serde_json = "1.0.149"

[lints]
workspace = true
