[package]
name = "rrq-executor"
version = "0.9.0"
edition = "2024"
license = "Apache-2.0"
description = "RRQ Unix socket executor runtime for Rust."
repository = "https://github.com/getresq/rrq"
homepage = "https://github.com/getresq/rrq"
documentation = "https://docs.rs/rrq-executor"
readme = "README.md"
keywords = ["rrq", "redis", "queue", "jobs", "executor"]
categories = ["asynchronous"]

[dependencies]
async-trait = "0.1.89"
rrq-protocol = { version = "0.9.0", path = "../rrq-protocol" }
chrono = "0.4.43"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tracing = "0.1.44"

opentelemetry = { version = "0.31.0", optional = true, features = ["trace"] }
opentelemetry-otlp = { version = "0.31.0", optional = true, features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.31.0", optional = true, features = ["rt-tokio", "trace"] }
tracing-opentelemetry = { version = "0.32.1", optional = true }
tracing-subscriber = { version = "0.3.22", optional = true, features = ["env-filter", "fmt", "registry"] }

[features]
otel = [
    "opentelemetry",
    "opentelemetry-otlp",
    "opentelemetry_sdk",
    "tracing-opentelemetry",
    "tracing-subscriber",
]
