[package]
name = "rrq"
version = "0.9.5"
edition = "2024"
license = "Apache-2.0"
description = "RRQ orchestrator CLI and worker runtime."
repository = "https://github.com/getresq/rrq"
homepage = "https://github.com/getresq/rrq"
documentation = "https://docs.rs/rrq"
readme = "README.md"
keywords = ["rrq", "redis", "queue", "jobs"]
categories = ["asynchronous", "command-line-utilities"]

[[bin]]
name = "rrq"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive"] }
cron = "0.15.0"
dotenvy = "0.15.7"
globset = "0.4.18"
ignore = "0.4.23"
num_cpus = "1.17.0"
notify = "8.2.0"
redis = { version = "1.0.2", features = ["tokio-comp", "tokio-rustls-comp", "connection-manager"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["fs", "io-std", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.9.11"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.20.0", features = ["v4"] }
rand = "0.9.2"

rrq-protocol = { version = "0.9.5", path = "../rrq-protocol" }

[dev-dependencies]
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["io-std", "io-util", "macros", "rt-multi-thread"] }
rrq-producer = { version = "0.9.5", path = "../rrq-producer" }
