[package]
name = "rrq-producer"
version = "0.9.5"
edition = "2024"
license = "Apache-2.0"
description = "RRQ producer client for enqueuing jobs into Redis."
repository = "https://github.com/getresq/rrq"
homepage = "https://github.com/getresq/rrq"
documentation = "https://docs.rs/rrq-producer"
readme = "README.md"
keywords = ["rrq", "redis", "queue", "jobs", "producer"]
categories = ["asynchronous"]

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.43", features = ["serde"] }
redis = { version = "1.0.2", features = ["tokio-comp", "tokio-rustls-comp", "connection-manager"] }
serde_json = "1.0.149"
uuid = { version = "1.20.0", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0.149"
