[package]
name = "rrq-protocol"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Shared RRQ executor protocol types."
repository = "https://github.com/getresq/rrq"
homepage = "https://github.com/getresq/rrq"
documentation = "https://docs.rs/rrq-protocol"
readme = "README.md"
keywords = ["rrq", "redis", "queue", "jobs", "protocol"]
categories = ["asynchronous"]

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
