[package]
name = "rrq-executor"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
async-trait = "0.1"
rrq-protocol = { path = "../rrq-protocol" }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"

opentelemetry = { version = "0.26", optional = true, features = ["trace"] }
opentelemetry-otlp = { version = "0.26", optional = true, features = ["tonic"] }
opentelemetry_sdk = { version = "0.26", optional = true, features = ["rt-tokio", "trace"] }
tracing-opentelemetry = { version = "0.27", optional = true }
tracing-subscriber = { version = "0.3", optional = true, features = ["fmt", "registry"] }

[features]
otel = [
    "opentelemetry",
    "opentelemetry-otlp",
    "opentelemetry_sdk",
    "tracing-opentelemetry",
    "tracing-subscriber",
]
