[package]
name = "rrq-executor"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
async-trait = "0.1.89"
rrq-protocol = { path = "../rrq-protocol" }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"

opentelemetry = { version = "0.31.0", optional = true, features = ["trace"] }
opentelemetry-otlp = { version = "0.31.0", optional = true, features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.31.0", optional = true, features = ["rt-tokio", "trace"] }
tracing-opentelemetry = { version = "0.32.1", optional = true }
tracing-subscriber = { version = "0.3.22", optional = true, features = ["fmt", "registry"] }

[features]
otel = [
    "opentelemetry",
    "opentelemetry-otlp",
    "opentelemetry_sdk",
    "tracing-opentelemetry",
    "tracing-subscriber",
]
