[package]
name = "rrq-orchestrator"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

description = "Rust orchestrator/scheduler for RRQ."

[[bin]]
name = "rrq"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive"] }
cron = "0.15.0"
dotenvy = "0.15.7"
globset = "0.4.18"
num_cpus = "1.17.0"
notify = "8.2.0"
redis = { version = "1.0.2", features = ["tokio-comp"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["io-std", "io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.9.11"
tracing = "0.1.44"
uuid = { version = "1.20.0", features = ["v4"] }
rand = "0.9.2"

rrq-protocol = { path = "../rrq-protocol" }

[dev-dependencies]
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["io-std", "io-util", "macros", "rt-multi-thread"] }
rrq-producer = { path = "../rrq-producer" }
